--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ valkey>=0.2.0
 pandas>=2.0.0
 numpy>=1.24.0
 tqdm>=4.60.0
+google-genai>=0.5.0
 google-cloud-aiplatform>=1.50.0
 python-dotenv>=1.0.0
 Flask>=3.0.0
